# geotab-add-in

./: .gitignore  AGENTS.md  FAQ.md  LICENSE  README.md  amplify.yml  docker-compose.yml  projects.code-workspace
.github/: copilot-instructions.md
add-in/: .env  .gitignore  .prettierignore  aspen-addin.json  index.html  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bg_service  Dockerfile.checks  README.md  (+10 more)
check-runner/: .gitignore  Dockerfile  README.md  check_runner.py  current-diagnostics.csv  formula.md  pyproject.toml
check-runner/check-scripts/: _backup  stuck_odometer.sql
check-runner/check-scripts/distance_to_road_validation/: 01_cleanup.sql  02_compute_distances.sql  03_insert_validation.sql  04_insert_results.sql  05_insert_by_device.sql
check-runner/scripts/road-counter/: 01-drop-old-validations.sql  02-compute-target-interval.sql  03-compute-historical-interval.sql  04-join-and-insert.sql  05-insert-by-device.sql
check-runner/tests/: test_connection_pool.py  test_load_scripts.py  test_main.py  test_run_all_checks.py  test_smoke.py
check-runner/tests/integration/: test_main_smoke.py  test_sql_scripts.py
check-runner/tests/unit/: test_connection_pool.py  test_database_url.py  test_load_scripts.py  test_main.py  test_run_all_checks.py  test_run_check.py
geotab-downloader/: README.md  pyproject.toml
geotab-downloader/geotab_downloader/: __main__.py  download.py
geotab-downloader/src/geotab_downloader/: __main__.py  client.py  download.py
geotab-downloader/tests/: test_client.py  test_download.py
(+657 files in other folders)
